# pgindexes

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: run_gin.sh
src/pgindexes/: 1.py  db.py  main.py
src/pgindexes/gin/: fts.py  jsonb.py  schema.py  seed.py
